# SamsungTask

./: CMakeLists.txt  README.md  main.cpp  puzzle_solver.cpp  puzzle_solver.h  test.cpp
tests/: test-1.in  test-2.in
